# ot-harjoitustyo-2023

./: .coverage  README.md  pyproject.toml
dokumentaatio/: changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/: .coverage
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/: .coverage
laskarit/viikko2/unicafe/src/tests/: .coverage  kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: matkakortti.md  monopoli1.md  monopoli2.md  sekvenssikaavio.md
src/: index.py
src/entities/: exercise.py  game.py  question.py  user.py
src/tests/entities/: user_test.py
