[tool.poetry]
name = "ot-harjoitustyo-2023"
version = "0.1.0"
description = ""
authors = ["Antti Immonen <antti.h.immonen@aalto.fi>"]
readme = "README.md"
packages = [{include = "ot_harjoitustyo_2023"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
